# bingo

./: .gitignore  LICENSE  Makefile  README.md  generate-metadata.py  pyproject.toml  terms
bingo/: __init__.py  __main__.py
bingo/templates/: bingo.tex
